src/objects/SurveyVersion__c.object
<CustomObject>
    <fields>
        <fullName>CloseReason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Automatically Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag means that the version could be downloaded by a partner.</description>
        <label>Distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistributionDate__c</fullName>
        <description>Indicate the date when the survey was distributed.</description>
        <label>Distribution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyVersions</relationshipLabel>
        <relationshipName>SurveyVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Version</label>
    <nameField>
        <displayFormat>SV-{0000000000}</displayFormat>
        <label>Survey Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>